updated tasks and launch, and the latest snippet. for win platform

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,20 +8,23 @@
             "label": "g++.exe build active file",
             "command": "C:\\TDM-GCC-64\\bin\\g++.exe",
             "args": [
+                "-D",
+                "LOCAL_PROJECT",
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                "${workspaceFolder}\\bin\\${fileBasenameNoExtension}.exe"
             ],
             "options": {
                 "cwd": "C:\\TDM-GCC-64\\bin"
             },
             "problemMatcher": [
-                "$gcc",
-                // "fileLocation": [ "absolute" ],
+                "$gcc"
             ],
-            "group": "build"
-        },
-       
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        }
     ]
 }
