--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,18 +11,18 @@
             "request": "launch",
             "program": "${file}",
             "console": "externalTerminal",
-            "pythonPath": "C:\\Users\\Ayush Verma\\Desktop\\CopetitiveCodes\\.venv\\Scripts\\python.exe",
+            "pythonPath": "${command:python.interpreterPath}"
         },
         {
             "name": "g++.exe - Build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
+            "program": "${workspaceFolder}\\bin\\${fileBasenameNoExtension}.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": true,
+            "externalConsole": false,
             "MIMode": "gdb",
             "miDebuggerPath": "C:\\TDM-GCC-64\\bin\\gdb.exe",
             "setupCommands": [
