--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,12 @@
         "iostream": "cpp",
         "random": "cpp",
         "unordered_map": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "ostream": "cpp",
+        "numeric": "cpp"
     },
     "C_Cpp.intelliSenseEngineFallback": "Disabled",
-    "python.pythonPath": "c:\\Users\\Ayush Verma\\Desktop\\CopetitiveCodes\\.venv\\Scripts\\python.exe",
-    "editor.fontFamily": "'Jetbrains Mono', monospace"
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
+    "editor.fontFamily": "'Jetbrains Mono', monospace",
+    "C_Cpp.dimInactiveRegions": false
 }
